# smart-tools

./: .env.development  .env.production  .gitignore  README.en.md  README.md  package.json  plugin.json  pnpm-lock.yaml  publish.js  publish.ts  tsconfig.json  update.json  vite.config.ts  vite.config.ts.timestamp-1719401891479-8c502ceac9e8f.mjs
public/: loading.html  plugin.json
src/: App.vue  env.d.ts  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  tray.rs
src-tauri/src/plugins/: clipboard.rs
src/api/: request.ts
src/common/: global.ts
src/components/: CateModal.vue  CategoryCard.vue  CategoryList.vue  FloatBtn.vue  ItemCard.vue  ItemModal.vue  LockScreen.vue  SearchForm.vue  SearchModal.vue
src/components/Settings/: index.vue  useSettings.ts
src/components/Todo/: Item.vue  index.vue  useTodo.ts
src/components/Update/: index.vue
src/hooks/: fileHooks.ts  useHitokoto.ts  useRequest.ts  useTime.ts
src/preload/: index.ts
src/router/: index.ts
src/store/: data.json  index.ts
src/typings/: components.d.ts  router.d.ts  shared.d.ts
src/utils/: auth.ts  index.ts  u.js  u.ts
src/utils/http/: index.ts
