[package]
name = "smart-tool"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.2", features = [ "http-request", "protocol-asset", "dialog-all", "os-all", "shell-execute", "shell-open", "shell-sidecar", "window-set-fullscreen", "path-all", "os-all", "shell-open", "global-shortcut-all", "fs-all", "global-shortcut-all"] }
clipboard-rs = "0.1.7"
base64 = "0.22.1"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
